fix: try again to fix horizontal scroll on phone

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 
 body {
   display: grid;
-  max-width: 100vw;
+  width: 100vw;
+  max-width: 100%;
   grid-template-columns: 1fr auto 1fr;
   grid-template-rows: repeat(3, max-content);
 
